# KaylasLauncher

./: .gitignore  .springsuite-repository.json  README.md  build.gradle  gradle.properties  gradlew  local.properties  proguard-rules.pro  settings.gradle
.mixin.out/audit/: mixin_implementation_report.txt
config/codechicken/: supporters.marker
docs/: UserLuaPolicy.md  component-constructor.md  secureprocess-attestation.md
local-maven/: README.md
local-maven/org/foxesworld/Ascendix/1.11.5-SNAPSHOT/: Ascendix-1.11.5-SNAPSHOT.pom  maven-metadata.xml
native/secure-process/: .gitignore  CMakeLists.txt  README.md  secure-process.gradle
native/secure-process/scripts/: build-release.ps1  package-hardware-release.ps1  sign-release.ps1
native/secure-process/src/: secure_process.cpp  secure_process_jni.cpp
native/secure-process/src/attestation/: attestation.cpp  attestation.hpp  cng_key.cpp  cng_key.hpp  hardware_attestation.cpp  hardware_attestation.hpp  hashing.cpp  hashing.hpp  tpm_key.cpp  tpm_key.hpp
native/secure-process/src/audit/: authenticode.cpp  authenticode.hpp  module_audit.cpp  module_audit.hpp
native/secure-process/src/bootstrap/: bootstrap_evidence.cpp  bootstrap_evidence.hpp  bootstrap_main.cpp
native/secure-process/src/core/: error_state.cpp  error_state.hpp  text.cpp  text.hpp
native/secure-process/src/mitigation/: flags.hpp  process_mitigation.cpp  process_mitigation.hpp
native/secure-process/src/runtime/: process_state.cpp  process_state.hpp
native/secure-process/tools/: tpm_probe.cpp
src/main/java/: Starter.java
src/main/java/org/foxesworld/: APP.java  Launcher.java  LauncherAgent.java  LauncherAttributes.java  RoundedFrame.java  SlidingPanelExample.java
src/main/java/org/foxesworld/Notification/: NotificationDisplay.java  NotificationPopup.java  NotificationUI.java  Test.java
src/main/java/org/foxesworld/engine/: AppFrame.java  Engine.java  EngineData.java  JVMHelper.java  LauncherAttributes.java
src/main/java/org/foxesworld/engine/action/: ActionHandler.java  Auth.java  ServerParser.java
src/main/java/org/foxesworld/engine/config/: Config.java
src/main/java/org/foxesworld/engine/discord/: Discord.java  DiscordInterface.java
src/main/java/org/foxesworld/engine/game/: ClientLauncherEntryPoint.java  GPUInfo.java  GameLauncher.java  GameListener.java  TweakClasses.java
src/main/java/org/foxesworld/engine/gpu/: GPUScanner.java
src/main/java/org/foxesworld/engine/gui/: GuiBuilder.java  GuiBuilderListener.java  GuiProperties.java  LoadState.java
src/main/java/org/foxesworld/engine/locale/: LanguageProvider.java
src/main/java/org/foxesworld/engine/news/: CustomScrollBarUI.java  News.java  NewsPanel.java  NewsProvider.java
src/main/java/org/foxesworld/engine/sound/: Sound.java
src/main/java/org/foxesworld/engine/utils/: ActionListener.java  CurrentMonth.java  DownloadUtils.java  DragListener.java  FontUtils.java  ImageUtils.java  JVMHelper.java  LibraryScanner.java  LoadingManager.java  ServerInfo.java  SpriteAnimation.java  md5Func.java
src/main/java/org/foxesworld/launcher/: Core.java  GifPlayerFrame.java  Launcher.java  LauncherAttributes.java  LauncherValidator.java  NotificationPopup.java  Sandbox.java  Schedule.java
src/main/java/org/foxesworld/launcher/Auth/: Auth.java  AuthResponse.java
src/main/java/org/foxesworld/launcher/Config/: Config.java
src/main/java/org/foxesworld/launcher/FileLoader/: DownloadListBuilder.java  FileLoader.java  FileLoaderListener.java  FileLoaderScanner.java  FileLoaderThread.java  FilesArray.java  FilesAttributes.java
src/main/java/org/foxesworld/newengine/: APP.java  AppFrame.java  FormCreatorApp.java
src/main/java/org/foxesworld/notification/: NotificationDisplay.java  NotificationPopup.java  NotificationUI.java  Test.java
src/main/java/org/foxesworld/test/: ActionHandler.java  DataInjector.java  DirWatcher.java  DynamicSpinner.java  FileProtector.java  SwingSpinner.java
src/main/java/org/foxesworld/threadManager/: ThreadManager.java
src/main/java/org/takesome/: Launcher.java
src/main/java/org/takesome/launcher/: Core.java  GifPlayerFrame.java  LauncherValidator.java
src/main/java/org/takesome/notification/: NotificationDisplay.java  NotificationPopup.java  NotificationUI.java  Test.java
src/main/resources/: bootAnimation.json5  engine.json  init.json  interface.json  loadFrames.json  locale.json  log4j2.xml  styles.json
src/main/resources/assets/: RequestProperties.json  animation.json  messages.json
src/main/resources/assets/components/settings/: directory-control.xml  ram-control.xml  volume-control.xml
src/main/resources/assets/frames/: auth.json  download.json  frame.json  frame.json5  frame.xml  mainFrame.json  mainFrame.xml  settings.json  test.json  testAuth.json  wait.json
src/main/resources/assets/frames/forms/: auth.json  logged.json  newsForm.json
src/main/resources/assets/lang/: en_US.json  it_IT.json  locale.json  pl_PL.json  ru_RU.json  uk_UA.json
src/main/resources/assets/scripts/launcher/: User.lua  component-links.lua  composite-controls.lua  launcher-ui.lua  loading-ui.lua  notifications.lua
src/main/resources/assets/sounds/: sounds.json
src/main/resources/assets/styles/: button.json  checkBox.json  checkbox.json  combobox.json  dropBox.json  label.json  labeledSlider.json  launcherDirectoryButton.json  launcherDirectoryControl.json  launcherRamControl.json  launcherSettingSpinner.json  launcherSliderTrack.json  launcherVolumeControl.json  passField.json  progressBar.json  scrollBar.json  serverBox.json  slider.json  textField.json
src/main/resources/assets/ui/: launcher-ui-provider.json
src/main/resources/config/: config.json
src/main/resources/config/internal/: engine.json
src/main/resources/script/: auth.js
srcThis/main/java/org/foxesworld/: APP.java
srcThis/main/java/org/foxesworld/engine/: Engine.java
srcThis/main/resources/: engine.json
srcThis/main/resources/assets/styles/: checkBox.json  label.json  passField.json
srcThis/main/resources/config/: config.json
(+412 files in other folders)
